--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas 
-numpy 
-plotly 
-scikit-learn 
-tensorflow 
-prophet 
-yfinance
+streamlit>=1.20.0
+pandas>=1.5.0
+numpy>=1.22.0
+plotly>=5.13.0
+scikit-learn>=1.2.0
+tensorflow>=2.10.0
+prophet>=1.1
+yfinance>=0.2.20
