--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit>=1.20.0
-pandas>=1.5.0
-numpy>=1.22.0
-plotly>=5.13.0
-scikit-learn>=1.2.0
-tensorflow>=2.10.0
-prophet>=1.1
-yfinance>=0.2.20
+streamlit==1.35.0
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.21.0
+scikit-learn==1.4.2
+tensorflow==2.15.0
+prophet==1.1.5
+yfinance==0.2.38
+prophet==1.1.5
+cmdstanpy==1.2.0
+# Additional dependencies for Prophet
