--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-pandas
-numpy
-plotly
-scikit-learn
-tensorflow>=2.10.0,<2.11.0
+pandas 
+numpy 
+plotly 
+scikit-learn 
+tensorflow 
+prophet 
+yfinance
