--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.26.4
-plotly==5.21.0
-scikit-learn==1.4.2
-tensorflow==2.15.0
-prophet 
-yfinance
+streamlit
+pandas 
+numpy 
+matplotlib 
+plotly 
+yfinance 
+alpha-vantage 
+fredapi 
+textblob 
+nltk 
+pandas-ta 
+shap 
+scikit-learn 
+tensorflow
