--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-streamlit==1.46.1
-pandas==2.3.0
-numpy==2.3.1
-matplotlib==3.10.3
-plotly==6.2.0
-yfinance==0.2.64
-alpha-vantage==3.0.0
-fredapi==0.5.2
-textblob==0.19.0
-nltk==3.9.1
-pandas-ta==0.3.14b0
-shap==0.48.0
-scikit-learn==1.7.0
-tensorflow==2.19.0rc0  
+streamlit
+yfinance
+pandas
+numpy
+plotly
